CSS: The sorting arrow hass been replaced by a black triangle (it fits better with the bold headings), and has been moved after the heading text (it avoids the text shifting). Mix forfat for some html.heex files

--- a/server/assets/css/app.css
+++ b/server/assets/css/app.css
@@ -266,10 +266,12 @@ main {
     border: 1px solid #000000;
 }
 
-.sortable-list-heading.asc:before {
-    content: "▵";
+.sortable-list-heading.asc:after {
+    content: "▲";
+    margin-left: 0.4em;
 }
 
-.sortable-list-heading.desc:before {
-    content: "▿";
+.sortable-list-heading.desc:after {
+    content: "▼";    
+    margin-left: 0.4em; 
 }
